--- a/templates/docker-compose.yml.j2
+++ b/templates/docker-compose.yml.j2
@@ -1,9 +1,6 @@
 ---
 
 {{ ansible_managed | comment }}
-##############################
-# If you're seeing this, you're using a symlinked version of this role.
-##############################
 ---
 version: "{{ compose_schema_version | default('2') }}"
 services:
@@ -92,7 +89,7 @@ services:
     depends_on:
 {% for dependent in container.depends_on %}
 {% if dependent is mapping %}
-      {{ dependent }}:
+      {{ dependent.service}}:
         condition: {{ dependent.condition }}
 {% else %}
       - {{ dependent }}
