--- a/templates/docker-compose.yml.j2
+++ b/templates/docker-compose.yml.j2
@@ -2,7 +2,9 @@
 
 {{ ansible_managed | comment }}
 
+{% if include_compose_version %}
 version: "{{ compose_schema_version | default('3') }}"
+{% endif %}
 services:
 {% for container in containers %}
 {% if container.active %}
